kustomization/excalidraw/kustomization/overlays/ingress/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  name: excalidraw-frontend
spec:
  rules:
  - host: excalidraw.example.com
    http:
      paths:
      - backend:
          service:
            name: excalidraw-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
